@@ -1249,7 +1249,9 @@ int busycnt_vzt_c_2; /* from vzt.c 641 */
 char highlight_wavewindow; /* from wavewindow.c */
 char alt_wheel_mode; /* from wavewindow.c */
 char use_scrollwheel_as_y; /* from wavewindow.c */
+#ifdef WAVE_ALLOW_SLIDER_ZOOM
 char enable_slider_zoom; /* from wavewindow.c */
+#endif
 int m1x_wavewindow_c_1; /* from wavewindow.c 642 */
 int m2x_wavewindow_c_1; /* from wavewindow.c 643 */
 char black_and_white; /* from wavewindow.c */
